--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,9 +1,7 @@
 body {
   margin: 0 auto;
-
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  /* color: #555; */
+  font-family: "Red Hat Mono", monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
@@ -54,7 +52,7 @@ article {
 
 /* THIS IS THE CSS FOR THE NAVBAR */
 
-ul {
+/* ul {
   padding: 0;
   margin: 0;
   list-style-type: none;
@@ -63,23 +61,24 @@ ul {
 li {
   display: inline-block;
   margin-left: 10px;
-}
+} */
 
-nav {
+/* nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 0 20px 0 20px;
-}
+  color: #555;
+} */
 
-a {
+/* a {
   color: blue;
   text-decoration: none;
 }
 
 a.active {
   color: red;
-}
+} */
 
 /* THIS IS THE CSS FOR THE HEADER-PICTURE */
 
