Fixed small errors in the styledcomponents

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -35,7 +35,7 @@ article {
 }
 
 /* .instagram-logo {
-  background-image: url(./assets/instagram-logga.png);
+  background-image: url(./assets/instagram-logga-2.png);
   background-repeat: no-repeat;
   position: absolute;
   top: 4px;
