Added the new URL to the backend after deploying it to Heroku

--- a/front-end/src/guestbook.css
+++ b/front-end/src/guestbook.css
@@ -69,7 +69,7 @@ form {
   color: red;
 }
 
-.heart-beat {
+/* .heart-beat {
   animation: heartbeat 2s;
   animation-iteration-count: infinite;
 }
@@ -84,7 +84,7 @@ form {
   100% {
     transform: scale(1);
   }
-}
+} */
 
 /* ----- THOUGHTS AREA ----- */
 
