--- a/front-end/src/guestbook.css
+++ b/front-end/src/guestbook.css
@@ -23,7 +23,8 @@ body {
 .form-card {
   border: 1px solid;
   padding: 20px;
-  box-shadow: 8px 8px 0px 0px #000000;
+  /* box-shadow: 8px 8px 0px 0px #000000; */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   display: flex;
   flex-direction: column;
   background-color: white;
