--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -13,7 +13,9 @@ article {
   width: 80%;
 }
 
-.wrapper {
+/* THIS IS THE CSS FOR CONTACT */
+
+.wrapper-contact {
   /* border: solid black 3px; */
   display: flex;
   flex-direction: column;
@@ -22,8 +24,6 @@ article {
   height: 100vh;
   position: relative;
 }
-
-/* THIS IS THE CSS FOR CONTACT */
 
 .phone {
   /* background-image: url(./assets/telefonlur-2.jpg); */
@@ -78,13 +78,27 @@ li {
   width: 100%;
   position: absolute;
   top: -30px;
-  /* z-index: 25; */
+  z-index: -1;
 }
 
 .header_container {
   overflow: hidden;
   height: 200px;
   position: relative;
+}
+
+/* THIS IS THE CSS FOR WELCOME/HOME PAGE */
+
+.wrapper-welcome {
+  border: solid black 3px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  position: relative;
+  margin-top: 25px;
+  line-height: 1.6;
+  max-width: 80ch;
 }
 
 /* THIS IS THE CSS FOR THE INFO ABOUT BORJE PAGE */
@@ -162,6 +176,16 @@ li {
 @media screen and (min-width: 1200px) {
   .header_img {
     top: -270px;
+  }
+
+  .header_container {
+    height: 350px;
+  }
+}
+
+@media screen and (min-width: 1450px) {
+  .header_img {
+    top: -315px;
   }
 
   .header_container {
