--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -90,15 +90,31 @@ li {
 /* THIS IS THE CSS FOR WELCOME/HOME PAGE */
 
 .wrapper-welcome {
-  border: solid black 3px;
+  /* border: solid black 3px; */
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 100vh;
   position: relative;
   margin-top: 25px;
+}
+
+p {
+  max-width: 60ch;
   line-height: 1.6;
-  max-width: 80ch;
+}
+
+.welcome-text-span {
+  font-size: large;
+  font-weight: 600;
+}
+
+.painting-welcomepage {
+  width: 65%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 25px;
 }
 
 /* THIS IS THE CSS FOR THE INFO ABOUT BORJE PAGE */
@@ -190,5 +206,25 @@ li {
 
   .header_container {
     height: 350px;
+  }
+}
+
+@media screen and (min-width: 1700px) {
+  .header_img {
+    top: -366px;
+  }
+
+  .header_container {
+    height: 400px;
+  }
+}
+
+@media screen and (min-width: 1900px) {
+  .header_img {
+    top: -426px;
+  }
+
+  .header_container {
+    height: 400px;
   }
 }
