--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -26,8 +26,6 @@ article {
 }
 
 .phone {
-  /* background-image: url(./assets/telefonlur-2.jpg); */
-  /* width: 100%; */
   height: 100%;
   position: absolute;
   background-repeat: no-repeat;
@@ -117,25 +115,25 @@ p {
   margin-top: 25px;
 }
 
-.gotoGalleryButton {
+.goToGalleryButton {
   position: relative;
-  padding: 10px 40px;
-  margin: 25px 10px 10px 0px;
+  padding: 5px 20px;
+  margin: 12px 5px 5px 0px;
   float: left;
   border-radius: 3px;
-  font-size: 20px;
+  font-size: 10px;
   color: #fff;
   text-decoration: none;
   background-color: #66806a;
   border: none;
-  border-bottom: 5px solid #b4cfb0;
+  border-bottom: 3px solid #b4cfb0;
   /* text-shadow: 0px -2px #b4cfb0; */
   -webkit-transition: all 0.1s;
   transition: all 0.1s;
 }
 
-.gotoGalleryButton:hover,
-.gotoGalleryButton:active {
+.goToGalleryButton:hover,
+.goToGalleryButton:active {
   -webkit-transform: translate(0px, 5px);
   -ms-transform: translate(0px, 5px);
   transform: translate(0px, 5px);
@@ -166,6 +164,33 @@ p {
 
   .header_container {
     height: 250px;
+  }
+
+  /* BUTTOM ON WELCOMEPAGE */
+
+  .goToGalleryButton {
+    position: relative;
+    padding: 10px 40px;
+    margin: 25px 10px 10px 0px;
+    float: left;
+    border-radius: 3px;
+    font-size: 20px;
+    color: #fff;
+    text-decoration: none;
+    background-color: #66806a;
+    border: none;
+    border-bottom: 5px solid #b4cfb0;
+    /* text-shadow: 0px -2px #b4cfb0; */
+    -webkit-transition: all 0.1s;
+    transition: all 0.1s;
+  }
+
+  .goToGalleryButton:hover,
+  .goToGalleryButton:active {
+    -webkit-transform: translate(0px, 5px);
+    -ms-transform: translate(0px, 5px);
+    transform: translate(0px, 5px);
+    border-bottom: 1px solid #b4cfb0;
   }
 
   /* THIS IS THE CSS FOR CONTACT */
