--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -26,27 +26,26 @@ article {
 }
 
 .phone {
-  height: 100%;
+  height: 65%;
   position: absolute;
+  top: 0;
+  left: -24px;
   background-repeat: no-repeat;
-  background-position-y: center;
   z-index: -1;
 }
 
-/* .instagram-logo {
-  background-image: url(./assets/instagram-logga-2.png);
+.instagram {
   background-repeat: no-repeat;
   position: absolute;
-  top: 4px;
-  left: 140px;
-  width: 100%;
-  height: 100%;
-} */
+  top: 175px;
+  left: 120px;
+  height: 70px;
+}
 
 .contact-text {
   position: absolute;
-  top: 15%;
-  left: 20%;
+  top: 1px;
+  left: 60px;
   z-index: -1;
 }
 
@@ -98,7 +97,7 @@ li {
   margin-top: 25px;
 }
 
-p {
+.wrapper-welcome p {
   max-width: 60ch;
   line-height: 1.6;
   z-index: -1;
@@ -146,7 +145,7 @@ p {
 /* THIS IS THE CSS FOR THE INFO ABOUT BORJE PAGE */
 
 .Img-Borje_Brorson_summer {
-  height: 50%;
+  height: 100px;
   z-index: -1;
 }
 
@@ -184,18 +183,21 @@ p {
   /* THIS IS THE CSS FOR CONTACT */
 
   .phone {
-    left: 30px;
-  }
-
-  .instagram-logo {
-    left: 715px;
+    height: 80%;
+    top: 0;
+    left: -24px;
   }
 
   .contact-text {
-    position: absolute;
-    top: 25%;
-    left: 40%;
+    top: 5%;
+    left: 35%;
     font-size: 120%;
+  }
+
+  .instagram {
+    top: 243px;
+    left: 273px;
+    height: 80px;
   }
 }
 
@@ -215,14 +217,12 @@ p {
 
   /* THIS IS THE CSS FOR CONTACT */
 
-  .instagram-logo {
-    top: 4px;
-    left: 140px;
+  .contact-text {
+    left: 40%;
   }
 
-  .contact-text {
-    top: 30%;
-    left: 45%;
+  .instagram {
+    left: 388px;
   }
 }
 
