Trying a new width for the navbar

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -291,6 +291,7 @@ li {
   /* CSS INFO ABOUT BÖRJE */
 
   .wrapper-img-infoaboutBorje {
+    margin: 20px 0 25px 0;
     display: flex;
     flex-direction: row;
     gap: 3px;
