--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -199,11 +199,22 @@ article {
   flex-direction: column;
   align-items: center;
   position: relative;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  margin-bottom: 50px;
 }
 
 .wrapper-exhibit h1 {
   margin-top: 50px;
   font-size: 30px;
+}
+
+.wrapper-exhibit span {
+  font-weight: 700;
+}
+
+.wrapper-exhibit p {
+  max-width: 60ch;
+  line-height: 1.6;
 }
 
 /* CSS FOR GALLERY */
